--- a/src/EasycryptoApp.css
+++ b/src/EasycryptoApp.css
@@ -1,3 +1,4 @@
-.EasycryptoApp {
+#page-title {
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    //font-family: "Lucida Console", "Courier New", monospace;
 }
-
